--- a/style.css
+++ b/style.css
@@ -85,3 +85,24 @@ a{
 .template{
     width: 100%;
 }
+.owl-theme .owl-nav {
+    margin-top: -55px;
+}
+
+#dxp-carrossel > div.owl-nav{
+    margin-top: -30%;
+    position: absolute;
+    width: 100%;
+    height: 0;
+}
+#dxp-carrossel > div.owl-nav > button > img{
+    width: 100%;
+}
+#dxp-carrossel > div.owl-nav .owl-prev{
+    float: left;
+    max-width: 25px;
+}
+#dxp-carrossel > div.owl-nav .owl-next{
+    float: right;
+    max-width: 25px;
+}
