--- a/style.css
+++ b/style.css
@@ -125,3 +125,11 @@ a{
     border-radius: 5px;
     width: 100px;
 }
+@media only screen and (max-width: 700px) {
+    #dxp_categories > dd {
+        padding: 4px;
+        padding-left: 7px;
+        padding-right: 7px;
+        font-size: 0.8rem;
+    }
+}
