--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
+
+@font-face {
+    font-family: arboria;
+    src: url(https://midia.fotos-riachuelo.com.br/spa-storefront/public/fonts/arboria-medium.woff);
+  }
 body{
     width: 100%;
     max-width: 1080px;
     margin: 0 auto;
+    font-family: 'arboria';
+    font-weight: 100;
 }
 #dxp_template{
     max-width: 910px;
@@ -38,23 +45,32 @@ body{
     padding: 0;
     margin: 0;
     vertical-align: bottom;
-    border-bottom: 1px solid #d3d3d3;
+    text-align: center;
 }
 #dxp_categories{
-display: inline-flex;
-padding: 0;
-margin: 0;
+    display: inline-flex;
+    padding: 0;
+    margin: 0;
 }
 #dxp_categories > dd{
-    padding: 10px;
+    padding: 5px;
     border-left: 0px solid #a9a9a9;
     border-top: 1px solid #3d3d3d;
     border-right: 1px solid #3d3d3d;
     margin:0;
-    padding-left: 15px;
-    padding-right: 15px;
-
-
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 50px;
+    font-size: 0.8rem;
+}
+.dxp-p-title{
+    color: #6c6c6c;
+    margin: 8px 0px 4px;
+    font-size: 10px;
+    line-height: 20px;
+    letter-spacing: 0;
+    text-transform: capitalize;
+    font-weight: lighter;
 }
 #dxp_categories > dd:hover{
     background: #4c4c4c;
@@ -79,7 +95,6 @@ a{
 #dxp_recs{
     border: 1px solid #000;
     padding: 15px;
-    min-height: 500px;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
 }
